gitea/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: git-service
spec:
  serviceName: git-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      containers:
      - name: git-service
        image: gitea/gitea:1.9.2
        command: ["gitea"]
        args: ["web", "--config", "/etc/gitea/app.ini"]
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gitea-pv
          mountPath: /data
        - name: config-volume
          mountPath: /etc/gitea
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
        - name: config-volume
          configMap:
            name: app-ini
  volumeClaimTemplates:
  - metadata:
      name: gitea-pv
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1Gi"
      storageClassName: nfs-data
