gitea/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-service-ingress
spec:
  type: ClusterIP
  ports:
  - name: webui
    port: 3000
    targetPort: 3000
