gitea/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-service
spec:
  type: LoadBalancer
  ports:
  - name: ssh
    port: 3001
    protocol: TCP
    targetPort: 3001
